--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 									<p id="primero">¿que color tiene este parrafo?</p>
 									<p id="segundo">¿Que color tiene este parrafo?</p>
 									<p id="tercero">¿Que color tiene este parrafo?</p>
-									<a href="practica02.html">practica02</a>
-									<a href="práctica03.html">practica03</a>
+									<a href="Practica02.html">practica02</a>
+									<a href="Práctica03.html">practica03</a>
 					</body>
 					</html>
